Move logic back into main ; experiment with jshell

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
   <artifactId>try-java8</artifactId>
   <name>Try Java 8</name>
 
+  <properties>
+    <jacoco.argLine/>
+  </properties>
+
   <repositories>
     <repository>
       <id>purplepip-releases</id>
