--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,35 @@
     <jacoco.argLine/>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>java</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>com.purplepip.java8.TryStream</mainClass>
+          <systemProperties>
+            <systemProperty>
+              <key>logback.debug</key>
+              <value>true</value>
+            </systemProperty>
+          </systemProperties>
+          <arguments>
+            <argument>-Dlogback.debug=true</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <repositories>
     <repository>
       <id>purplepip-releases</id>
