--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
   <artifactId>try-java8</artifactId>
   <name>Try Java 8</name>
+  <version>1.0.0-SNAPSHOT</version>
 
   <properties>
     <jacoco.argLine/>
