--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
     <logback.debug>false</logback.debug>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+  </dependencies>
+  
   <build>
     <plugins>
       <plugin>
